--- a/kksdcm-config/files/www/sd_default_index.html
+++ b/kksdcm-config/files/www/sd_default_index.html
@@ -8,7 +8,7 @@
   <script src="/js/utils.js"></script>
   <script src="/js/p44api.js"></script>
 
-  <title>Demo</title>
+  <title>KKS-DCM registers</title>
 
   <style type="text/css" media="screen">
     dd { font-weight: bold; }
@@ -59,6 +59,7 @@
   margin: 10px 2px;
   border: black 1px solid;
   padding: 5px;
+  color: black;
 }
 .popup button {
   width: 98%;
@@ -68,6 +69,75 @@
 .popup button:hover {
   background-color: #BBB;
 }
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
+  color: white;
+}
+
+body {
+  background: linear-gradient(to bottom, rgba(30, 30, 30, 1) 0%, rgba(0, 52, 96, 1) 100%);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+h1 {
+  text-align: center;
+}
+
+.mainmenu {
+  text-align: center;
+}
+
+.mainmenu #refreshlist {
+  width: 80%;
+  background-color: #060;
+  border: none;
+  border-radius: 8px;
+  padding: 5px 10px;
+  margin: 0 8px;
+}
+
+table.registers {
+  margin: auto;
+}
+
+.registers th {
+  background-color: #444;
+  text-align: left;
+  padding: 7px;
+}
+
+.registers td {
+  text-align: left;
+  padding: 0 4px;
+}
+
+.registers input {
+  background-color: #222;
+  padding: 2px;
+  font-size: inherit;
+}
+
+.registers button {
+  background-color: #800;
+  border: none;
+  border-radius: 8px;
+  padding: 5px 10px;
+  margin: 0 8px;
+}
+
+
+td.center {
+  text-align: center;
+}
+
+
 </style>
 
 
@@ -87,17 +157,17 @@
 
 
 <div id="loginDialog" class="overlay" style="display:none">
-	<div class="popup">
-		<h2>KKSDCM - Login</h2>
-		<div class="content">
+  <div class="popup">
+    <h2>KKSDCM - Login</h2>
+    <div class="content">
       <p id="loginMessage"></p>
       <label for="loginUser">User:</label><br/>
       <input type="text" autocomplete="off" name="loginUser" id="loginUser" value="" ><br/>
       <label for="loginPassword">Password:</label><br/>
       <input type="password" name="loginPassword" id="loginPassword" value="" ><br/>
       <button type="button" id="loginCheckButton">Login</button>
-		</div>
-	</div>
+    </div>
+  </div>
 </div>
 
 
@@ -105,39 +175,96 @@
 
 <script>
 
-    function pollmodbus()
+
+
+    function saveButtonClick(event)
+    {
+      let regidx = parseInt(event.target.id.replace(/[^\d]+/, ""));
+      let newValue = $('#valueedit'+regidx.toString()).val().toString();
+      let call = { "cmd": "write", "index":regidx, "value": newValue};
+      apiCall(call, 10000, true, "coreregs").done(function(response) {
+        // also refresh data (but not from SPI, just modbus)
+        refreshValue(regidx, false);
+      }).fail(function(domain, code, message) {
+        // API problem
+        alert('API error: ' + domain + '] Error ' + code.toString() + ': ' + message);
+      });
+    }
+
+    function refreshButtonClick(event)
+    {
+      let regidx = parseInt(event.target.id.replace(/[^\d]+/, ""));
+      refreshValue(regidx, true);
+    }
+
+    function refreshValue(regidx, refresh)
+    {
+      let call = { "cmd": "read", "index":regidx, "refresh":refresh };
+      apiCall(call, 10000, true, "coreregs").done(function(response) {
+        // refresh data as represented by coreregs
+        $('#valueedit'+regidx.toString()).val(response.formatted);
+      }).fail(function(domain, code, message) {
+        // API problem
+        alert('API error: ' + domain + '] Error ' + code.toString() + ': ' + message);
+      });
+    }
+
+
+    function refreshRegisterList()
     {
       // get modbus register contents
-      var call = { "scriptapi": { "cmd": "regs" }};
-      apiCall(call, 10000, true).done(function(response) {
-        // create definition list
-        var listhtml = '';
-        for (var key in response) {
-          if (response.hasOwnProperty(key)) {
-            listhtml += '<dt>' + key + ':</dt><dd>' + response[key] + '</dd>';
+      let call = { "cmd": "list", "refresh":true };
+      apiCall(call, 10000, true, "coreregs").done(function(response) {
+        // create register UI list
+        var listhtml =
+          '<table class="registers"><thead>' +
+          ' <tr><th>Name</th><th>Beschreibung</th><th>ModBus</th><th>SPI</th><th>Min</th><th>Max</th><th>Wert</th><th>Aktionen</th></tr>' +
+          '</thead><tbody>';
+        response.forEach(function(reg, index, registers) {
+          listhtml +=
+            '<tr>' +
+            `<td>${reg.regname}</td>` +
+            `<td>${reg.description}</td>` +
+            `<td class="center">${reg.modbusreg}</td>` +
+            `<td class="center">${reg.spiaddr}</td>` +
+            `<td class="center">${reg.min}</td>` +
+            `<td class="center">${reg.max}</td>` +
+            '<td>'+
+              `<input id="${"valueedit"+reg.regidx.toString()}" type="text" size="20" value="${reg.formatted.trim()}" ${reg.readonly ? 'readonly="true"' : ''}"/>` +
+            '</td>' +
+            '<td>' +
+              `<button id="${"refreshbtn"+reg.regidx.toString()}" onclick="refreshButtonClick(event);">Refresh</button>`;
+          if(!reg.readonly) {
+            listhtml +=
+              `<button id="${"savebtn"+reg.regidx.toString()}" onclick="saveButtonClick(event);">Speichern</button>`;
           }
-        }
+          listhtml +=
+            '</td>' +
+            '</tr>';
+        });
+        listhtml +=
+          '</tbody></table>';
         $('#registerlist').html(listhtml);
       }).fail(function(domain, code, message) {
         // API problem
         alert('API error: ' + domain + '] Error ' + code.toString() + ': ' + message);
-      }).always(function() {
-        // repeat
-        setTimeout(pollmodbus, 2000);
       });
     }
 
+
     $(document).ready(function() {
-      pollmodbus()
+      refreshRegisterList()
     });
 
 </script>
 
 <div id="main">
-  <h1>Demo website: display modbus registers</h1>
-
-  <dl id="registerlist">
-  </dl>
+  <h1>KKS-DCM - preliminary register viewer/editor</h1>
+  <p class="mainmenu">
+    <button id="refreshlist" onclick="refreshRegisterList();">Refresh</button>
+  </p>
+  <div id="registerlist">
+  </div>
 </div>
 
 
